--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -39,10 +39,19 @@
     &--top {
       top: 35%;
     }
+
+    @media (max-width: 1200px) {
+      padding: 0 65px;
+    }
+
+    @media (max-width: 767px) {
+      padding: 0 35px;
+    }
   }
 
   &__title {
     display: inline-block;
+
     font-size: 78px;
     line-height: 80px;
     letter-spacing: .06em;
